--- a/src/scss/blocks/input-text.scss
+++ b/src/scss/blocks/input-text.scss
@@ -1,25 +1,32 @@
 .input-text {
-  width: 360px;
-  max-width: 100%;
-  padding-left: 50px;
-  height: 40px;
-  box-sizing: border-box;
-  background: transparent;
-  border: none;
-  border-bottom: 3px solid rgba(255, 255, 255, 0.5);
-  @include set-placeholder(#fff, 16px, 400);
-  background-position: 15px 50%;
-  background-repeat: no-repeat;
-  color: #fff;
-  font-size: 16px;
-  font-weight: 400;
-  &--name {
-    background-image: url("../img/icon-user.svg");
-  }
-  &--tel {
-    background-image: url("../img/icon-tel.svg");
-  }
-  &--email {
-    background-image: url("../img/icon-letter.svg");
-  }
+	width: 360px;
+	max-width: 100%;
+	padding-left: 50px;
+	height: 40px;
+	box-sizing: border-box;
+	background: transparent;
+	border: none;
+	border-bottom: 3px solid rgba(255, 255, 255, 0.5);
+	@include set-placeholder(#fff, 16px, 400);
+	background-position: 15px 50%;
+	background-repeat: no-repeat;
+	color: #fff;
+	font-size: 16px;
+	font-weight: 400;
+	&:focus {
+		border-color: rgba(255, 255, 255, 1);
+		outline: none;
+	}
+	// &:invalid {
+	// 	border-color: red;
+	// }
+	&--name {
+		background-image: url("../img/icon-user.svg");
+	}
+	&--tel {
+		background-image: url("../img/icon-tel.svg");
+	}
+	&--email {
+		background-image: url("../img/icon-letter.svg");
+	}
 }
