--- a/src/templates/blog.html
+++ b/src/templates/blog.html
@@ -67,7 +67,7 @@
             </li>
           </ul>
         </nav>
-        <div class="contacts-block contacts-block--opened js-contacts-block">
+        <div class="contacts-block js-contacts-block">
           <a class="contacts-block__tel js-contacts-tel" href="tel:74732406226" aria-label="Наш телефон">
             <svg class="contacts-block__tel-icon">
               <use xlink:href="../img/sprite.svg#phone" />
