--- a/src/templates/portfolio.html
+++ b/src/templates/portfolio.html
@@ -67,51 +67,51 @@
           </li>
         </ul>
       </nav>
-      <div class="contacts-block contacts-block--opened js-contacts-block">
-        <a class="contacts-block__tel js-contacts-tel" href="tel:74732406226" aria-label="Наш телефон">
-          <svg class="contacts-block__tel-icon">
-            <use xlink:href="../img/sprite.svg#phone" />
-          </svg>
-          <span class="contacts-block__tel-text">+7 473 240-6226</span>
-        </a>
-        <div>
-          <ul class="contacts-block__social-list js-social-list">
-            <li class="contacts-block__social-item js-social-item">
-              <a class="contacts-block__social-link" href="#" target="_blank" aria-label="Наш vk">
-                <svg class="contacts-block__social-icon" width="15" height="8">
-                  <use xlink:href="../img/sprite.svg#vk" />
-                </svg>
-              </a>
-            </li>
-            <li class="contacts-block__social-item js-social-item">
-              <a class="contacts-block__social-link" href="#" target="_blank" aria-label="Наш instagramm">
-                <svg class="contacts-block__social-icon" width="12" height="12">
-                  <use xlink:href="../img/sprite.svg#in" />
-                </svg>
-              </a>
-            </li>
-            <li class="contacts-block__social-item js-social-item">
-              <a class="contacts-block__social-link" href="#" target="_blank" aria-label="Наш facebook">
-                <svg class="contacts-block__social-icon" width="8" height="15">
-                  <use xlink:href="../img/sprite.svg#fb" />
-                </svg>
-              </a>
-            </li>
-          </ul>
-          <ul class="contacts-block__lang-list js-lang-list">
-            <li class="contacts-block__lang-item">
-              <a href="#" class="contacts-block__lang-link active">
-                ru
-              </a>
-            </li>
-            <li class="contacts-block__lang-item">
-              <a href="#" class="contacts-block__lang-link">
-                en
-              </a>
-            </li>
-          </ul>
+      <div class="contacts-block js-contacts-block">
+          <a class="contacts-block__tel js-contacts-tel" href="tel:74732406226" aria-label="Наш телефон">
+            <svg class="contacts-block__tel-icon">
+              <use xlink:href="../img/sprite.svg#phone" />
+            </svg>
+            <span class="contacts-block__tel-text">+7 473 240-6226</span>
+          </a>
+          <div>
+            <ul class="contacts-block__social-list js-social-list">
+              <li class="contacts-block__social-item js-social-item">
+                <a class="contacts-block__social-link" href="#" target="_blank" aria-label="Наш vk">
+                  <svg class="contacts-block__social-icon" width="15" height="8">
+                    <use xlink:href="../img/sprite.svg#vk" />
+                  </svg>
+                </a>
+              </li>
+              <li class="contacts-block__social-item js-social-item">
+                <a class="contacts-block__social-link" href="#" target="_blank" aria-label="Наш instagramm">
+                  <svg class="contacts-block__social-icon" width="12" height="12">
+                    <use xlink:href="../img/sprite.svg#in" />
+                  </svg>
+                </a>
+              </li>
+              <li class="contacts-block__social-item js-social-item">
+                <a class="contacts-block__social-link" href="#" target="_blank" aria-label="Наш facebook">
+                  <svg class="contacts-block__social-icon" width="8" height="15">
+                    <use xlink:href="../img/sprite.svg#fb" />
+                  </svg>
+                </a>
+              </li>
+            </ul>
+            <ul class="contacts-block__lang-list js-lang-list">
+              <li class="contacts-block__lang-item">
+                <a href="#" class="contacts-block__lang-link active">
+                  ru
+                </a>
+              </li>
+              <li class="contacts-block__lang-item">
+                <a href="#" class="contacts-block__lang-link">
+                  en
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
       <button class="btn-contacts js-contacts-toggler" type="button" aria-label="Переключатель блока контактов">
         <svg class="btn-contacts__phone">
           <use xlink:href="../img/sprite.svg#phone" />
