--- a/src/scss/blocks/home-clients.scss
+++ b/src/scss/blocks/home-clients.scss
@@ -1,29 +1,30 @@
 .home-clients__title-wrapper {
-  background: #692d9d;
+	background: #692d9d url("../img/home-clients-noise.png") no-repeat 50% 50% /
+		auto;
 }
 
 .home-clients__title {
-  color: #fff;
+	color: #fff;
 }
 
 .home-clients__rightside {
-  padding: 100px 7%;
+	padding: 100px 7%;
 }
 
 .home-clients__list {
-  @include reset-list;
-  display: flex;
-  flex-wrap: wrap;
-  li {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    text-align: center;
-    margin-bottom: 50px;
-    @media (min-width: $breakpoint-medium) {
-      width: 50%;
-      margin-bottom: 150px;
-    }
-  }
+	@include reset-list;
+	display: flex;
+	flex-wrap: wrap;
+	li {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		width: 100%;
+		text-align: center;
+		margin-bottom: 50px;
+		@media (min-width: $breakpoint-medium) {
+			width: 50%;
+			margin-bottom: 150px;
+		}
+	}
 }
