--- a/src/scss/blocks/input-text.scss
+++ b/src/scss/blocks/input-text.scss
@@ -7,6 +7,7 @@
 	background: transparent;
 	border: none;
 	border-bottom: 3px solid rgba(255, 255, 255, 0.5);
+	border-radius: none;
 	@include set-placeholder(#fff, 16px, 400);
 	background-position: 15px 50%;
 	background-repeat: no-repeat;
@@ -17,9 +18,6 @@
 		border-color: rgba(255, 255, 255, 1);
 		outline: none;
 	}
-	// &:invalid {
-	// 	border-color: red;
-	// }
 	&--name {
 		background-image: url("../img/icon-user.svg");
 	}
