--- a/src/scss/blocks/types.scss
+++ b/src/scss/blocks/types.scss
@@ -8,7 +8,10 @@
 
 .types__rightside {
 	box-sizing: border-box;
-	padding: 20px;
+	padding: 20px 20px 120px 20px;
+	@media (min-width: $breakpoint-medium) {
+		padding: 20px;
+	}
 }
 
 .types__list {
