--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -49,3 +49,8 @@
 @import "blocks/btn-contacts";
 @import "blocks/page-404";
 @import "blocks/preloader";
+@import "blocks/article";
+@import "blocks/about";
+@import "blocks/table";
+@import "blocks/custom-ordered-list";
+@import "blocks/gallery";
