--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -55,3 +55,4 @@
 @import "blocks/custom-ordered-list";
 @import "blocks/gallery";
 @import "blocks/custom-unordered-list";
+@import "blocks/contacts";
