--- a/src/scss/blocks/result-list.scss
+++ b/src/scss/blocks/result-list.scss
@@ -1,10 +1,15 @@
 .result-list {
   @include reset-list;
   display: grid;
-  grid-template-columns: repeat(auto-fit, 380px);
+  grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
   grid-auto-rows: 275px;
 }
-
+@media(max-width:470px){
+  .result-list{
+    grid-template-columns:1fr;
+  }
+}
+  
 .result-list__item {
   padding: 60px 30px 30px;
   &:nth-child(1) {
